@@ -1,7 +1,10 @@
 package cn.soboys.restapispringbootstarter.utils;
 
+import jakarta.servlet.http.Cookie;
+import jakarta.servlet.http.HttpServletRequest;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
+import org.dromara.hutool.core.array.ArrayUtil;
 import org.dromara.hutool.core.map.MapUtil;
 import org.dromara.hutool.json.JSON;
 import org.dromara.hutool.json.JSONObject;
@@ -9,14 +12,12 @@ import org.dromara.hutool.json.JSONUtil;
 import org.springframework.web.context.request.RequestContextHolder;
 import org.springframework.web.context.request.ServletRequestAttributes;
 
-import javax.servlet.http.Cookie;
-import javax.servlet.http.HttpServletRequest;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.io.UnsupportedEncodingException;
 import java.lang.reflect.Method;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -52,8 +53,8 @@ public class RequestUtil {
      */
     public static JSON getParam(HttpServletRequest request) throws IOException {
         BufferedReader reader = new BufferedReader(new InputStreamReader(request.getInputStream()));
-        String str = "";
-        StringBuffer wholeStr = new StringBuffer();
+        String str;
+        StringBuilder wholeStr = new StringBuilder();
         //读取body体里面的内容；
         while ((str = reader.readLine()) != null) {
             wholeStr.append(str);
@@ -74,9 +75,7 @@ public class RequestUtil {
         //post或get 普通提交
         Map<String, String[]> parameterMap = request.getParameterMap();
         if (MapUtil.isNotEmpty(parameterMap)) {
-            parameterMap.forEach((key, value) -> {
-                jsonObject.put(key, value[0]);
-            });
+            parameterMap.forEach((key, value) -> jsonObject.put(key, JSONUtil.ofPrimitive(value[0])));
             return jsonObject;
         }
         //JSON提交
@@ -93,15 +92,11 @@ public class RequestUtil {
         }
         if (value == null) {
             Cookie[] cookies = request.getCookies();
-            if (cookies != null && cookies.length > 0) {
+            if (ArrayUtil.isNotEmpty(cookies)) {
                 for (Cookie cookie : cookies) {
                     if (cookie.getName().equals(name)) {
                         value = cookie.getValue();
-                        try {
-                            value = URLDecoder.decode(value, "UTF-8");
-                        } catch (UnsupportedEncodingException e) {
-                            log.error("Cookie 解码失败，编码=UTF-8，值=" + value);
-                        }
+                        value = URLDecoder.decode(value, StandardCharsets.UTF_8);
                         break;
                     }
                 }
@@ -115,7 +110,7 @@ public class RequestUtil {
     }
 
     public static boolean hasLocalRequest() {
-        return "127.0.0.1".endsWith(HttpUserAgent.getIpAddr()) ? true : false;
+        return "127.0.0.1".endsWith(HttpUserAgent.getIpAddr());
     }
 
     public static String getHost() {
@@ -153,10 +148,9 @@ public class RequestUtil {
     }
 
 
-
-
     /**
      * 获取请求地址中的某个参数
+     *
      * @param url
      * @param name
      * @return
@@ -167,6 +161,7 @@ public class RequestUtil {
 
     /**
      * 去掉url中的路径，留下请求参数部分
+     *
      * @param url url地址
      * @return url请求参数部分
      */
@@ -187,7 +182,8 @@ public class RequestUtil {
 
     /**
      * 将参数存入map集合
-     * @param url  url地址
+     *
+     * @param url url地址
      * @return url请求参数部分存入map集合
      */
     public static Map<String, String> urlSplit(String url) {
@@ -197,16 +193,16 @@ public class RequestUtil {
         if (strUrlParam == null) {
             return mapRequest;
         }
-        arrSplit = strUrlParam.split("[&]");
+        arrSplit = strUrlParam.split("&");
         for (String strSplit : arrSplit) {
-            String[] arrSplitEqual = null;
-            arrSplitEqual = strSplit.split("[=]");
+            String[] arrSplitEqual;
+            arrSplitEqual = strSplit.split("=");
             //解析出键值
             if (arrSplitEqual.length > 1) {
                 //正确解析
                 mapRequest.put(arrSplitEqual[0], arrSplitEqual[1]);
             } else {
-                if (arrSplitEqual[0] != "") {
+                if (!StrUtil.equals(arrSplitEqual[0], "")) {
                     //只有参数没有值，不加入
                     mapRequest.put(arrSplitEqual[0], "");
                 }
@@ -217,7 +213,7 @@ public class RequestUtil {
 
     public static class WebRequest<T> {
 
-        private T request;
+        private final T request;
 
         public WebRequest(T request) {
             this.request = request;
